tests/fixtures/positive/code-style/ProhibitSuppressWarnings_CommentMentioningNOPMD.cls
// Valid: Comment mentioning NOPMD but not as a suppression marker
public class Example2 {
    public void method() {
        // This code does not use NOPMD
        // We should avoid NOPMD in our codebase
        int value = 42;
    }
}

