tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_Uppercase.cls
// Violation: NOPMD comment (uppercase)
public class Example5 {
    public void method() {
        int unused = 42; // NOPMD
    }
}

